<resources>
    <string name="app_name">FinanceiroAPP</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Registrar</string>
    <string name="action_login">Entrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="account">Já possui uma conta? Clique aqui!</string>
    <string name="account2">Não possui uma conta? Clique aqui!</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Sair</string>


    <!-- Main Activity -->
    <string name="receitas">Cadastrar receitas</string>
    <string name="despesas">Cadastrar despesas</string>
    <string name="saldo">Gerenciar saldos</string>


</resources>